[package]
name = "wormhole"
version = "0.1.1"
authors = ["Chuck Musser <cmusser@sonic.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.1", features = ["async-await"] }
futures-util = "0.3.1"
serde_yaml = "0.8.11"
sodiumoxide = "0.2.5"
structopt = "0.3.3"
tokio = { version = "0.2.1", features = ["dns", "io-util", "macros", "tcp"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.1.5"

[lib]
name = "wormhole"
path = "src/lib.rs"

[[bin]]
name = "wormhole"
path = "src/wormhole.rs"

[[bin]]
name = "wormhole-keygen"
path = "src/wormhole-keygen.rs"


