[package]
name = "wormhole"
version = "0.3.0"
authors = ["Chuck Musser <cmusser@sonic.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
futures = { version = "0.3", features = ["async-await"] }
futures-util = "0.3"
serde_yaml = "0.8"
sodiumoxide = "0.2"
structopt = "0.3"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.2"

[lib]
name = "wormhole"
path = "src/lib.rs"

[[bin]]
name = "wormhole"
path = "src/wormhole.rs"

[[bin]]
name = "wormhole-keygen"
path = "src/wormhole-keygen.rs"


